[gd_scene load_steps=7 format=2]

[ext_resource path="res://models/emmiters/rock.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/stone/new_stone-1.png.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/stone/new_stone-2.png.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/stone/new_stone-3.png.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "collide",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 29.94, 22.6469 )

[node name="Node2D" type="Node2D" index="0"]

[node name="Area2D" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 3
collision_mask = 3
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="Sprite" type="AnimatedSprite" parent="Area2D" index="0"]

frames = SubResource( 1 )
animation = "fall"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="1"]

position = Vector2( 0, -2.04177 )
scale = Vector2( 1, 1.40836 )
shape = SubResource( 2 )

[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_Area2D_area_entered"]

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]

[connection signal="animation_finished" from="Area2D/Sprite" to="Area2D" method="_on_Sprite_animation_finished"]


